--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Tim Beermann</h1>
-						<p>Software Enginer &nbsp;&bull;&nbsp; Geospatial Solutions Architect &nbsp;&bull;&nbsp; Soccer Videographer</p>
+						<p>Software Enginer &nbsp;&bull;&nbsp; Geospatial Solutions Architect 
+						&nbsp;&bull;&nbsp; <a href="/video/video.html"> Soccer Videographer</a></p>
 						<p><a href='http://www.shape2earth.com'>Shape2Earth</a> &nbsp;&bull;&nbsp; <a href='http://www.warp4.com'>Warp4</a>  </p>
 						<nav>
 							<ul>
